src/main/resources/assets/gui/index.css
@font-face {
    src: url('CaslonAntique.ttf');
}

@font-face {
    src: url('CaslonAntique-Bold.ttf');
}

@font-face {
    src: url('CaslonAntique-Italic.ttf');
}

@font-face {
    src: url('CaslonAntique-BoldItalic.ttf');
}

.root {
    -fx-font-family: 'Caslon Antique Bold';
    -fx-font-size: 22px;
}

.root, .main {
    -fx-background-image: url('background.png');
    -fx-background-size: 500px;
    -fx-background-position: center;
}

.main-small {
    -fx-background-color: #cdcdb6;
    -fx-background-radius: 10px;
    -fx-border-radius: 10px;
    -fx-background-insets: 1px;
    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 80, 0, 0, 0);
}

.dark Text {
    -fx-fill: white;
}

.overlay {
    -fx-background-color: rgba(0, 0, 0, 0.6);
}

.text {
    -fx-font-family: 'Caslon Antique Bold';
}

.button {
    -fx-background-color: #090a0c,
    linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
    linear-gradient(rgb(26, 57, 109), #191d22),
    radial-gradient(center 50% 0%, radius 100%, rgba(23, 176, 230, 0.9), rgba(26, 100, 179, 0.2));
    -fx-background-radius: 5px;
    -fx-border: 0;
    -fx-background-insets: 0, 1, 2, 0;
    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.3), 4, 0, 0, 1);
    -fx-text-fill: linear-gradient(white, #d0d0d0);
    -fx-padding: 6px;
    -fx-pref-height: 40px;
    -fx-alignment: center;
}

.button:hover {
    -fx-background-color: #090a0c,
    linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
    linear-gradient(rgb(26, 57, 109), #191d22),
    radial-gradient(center 50% 0%, radius 100%, rgba(23, 176, 230, 0.9), rgba(26, 100, 179, 0.5));
    -fx-text-fill: linear-gradient(rgb(250, 236, 72) 60%, white);
}

.button:pressed {
    -fx-background-color: #090a0c,
    linear-gradient(#38424b 0%, #1f2429 20%, #191d22 100%),
    linear-gradient(rgb(26, 57, 109), #191d22),
    radial-gradient(center 50% 0%, radius 100%, rgba(23, 176, 230, 0.9), rgba(26, 100, 179, 0.7));
    -fx-text-fill: linear-gradient(rgb(250, 236, 72), white);
}

.text-field {
    -fx-pref-height: 40px;
    -fx-border: 0;
    -fx-background-color: radial-gradient(center 50% 0%, radius 100%, rgba(255, 255, 255, 0.9), rgba(240, 240, 240, 0.9));
    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 40, 0, 0, 0);
    -fx-padding: 6px;
}

.text-field:focused {
    -fx-font-family: 'Caslon Antique';
}

.label {
    -fx-font-size: 21px;
    -fx-text-fill: linear-gradient(rgb(26, 57, 109), rgb(26, 100, 179));
    -fx-padding: 0px 6px 0px 6px;
}

.dark .label {
    -fx-text-fill: linear-gradient(rgb(26, 100, 179), rgb(23, 176, 230));
}

.card {
    -fx-background-repeat: stretch;
    -fx-background-size: cover;
    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 10, 0.5, 0, 0);
    -fx-font-size: 19px;
}

.card:selected {
    -fx-border-color: linear-gradient(rgb(250, 236, 72) 70%, white);
    -fx-border-width: 3px;
}

Production:selected > VBox {
    -fx-opacity: 0.5;
}

.spinner .increment-arrow-button {
    -fx-padding: 3 4 3 4; /*caspian.css values are 4 8 4 8 */
}

.spinner .decrement-arrow-button {
    -fx-padding: 3 4 3 4; /*caspian.css values are 3 8 6 8 */
}

.spinner .increment-arrow-button .increment-arrow {
    -fx-padding: 5 6 5 6; /*caspian.css values are 2 4 2 4 */
}
.spinner .decrement-arrow-button .decrement-arrow {
    -fx-padding: 5 6 5 6; /*caspian.css values are 2 4 2 4 */
}

.resource {
    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0.5, 0, 0);
}

.blue {
    -fx-background-image: url('devcardtemplates/blue.png');
}

.green {
    -fx-background-image: url('devcardtemplates/green.png');
}

.purple {
    -fx-background-image: url('devcardtemplates/purple.png');
}

.yellow {
    -fx-background-image: url('devcardtemplates/yellow.png');
}

.depotleader {
    -fx-background-image: url('leadertemplates/depotleader.png');
}

.productionleader {
    -fx-background-image: url('leadertemplates/productionleader.png');
}

.zeroleader {
    -fx-background-image: url('leadertemplates/zeroleader.png');
}

.discountleader {
    -fx-background-image: url('leadertemplates/discountleader.png');
}

